--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -6,6 +6,7 @@ html(lang="en")
     title Hexlet Fastify Boilerplate
     script(src=assetPath('main.js'))
     link(href=assetPath('main.css') rel="stylesheet")
+    link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
   body.d-flex.flex-column.min-vh-100
     nav.navbar.navbar-expand-lg.navbar-light.bg-light.mb-3
