--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -7,9 +7,16 @@ block content
         th= t('views.users.id')
         th= t('views.users.email')
         th= t('views.users.createdAt')
+        th= t('views.users.actions')
     tbody
       each user in users
         tr
           td= user.id
           td= user.email
           td= formatDate(user.createdAt)
+          td
+            div.d-flex.flex-wrap
+              a.btn.btn-primary.me-1(href="#")= t('views.users.edit')
+              form(action = '#', method="post")
+                input(name="_method" type="hidden" value=method)
+                input.btn.btn-danger(type='submit', value=t('views.users.delete'))
