--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -8,8 +8,8 @@ html(lang="en")
     link(href=assetPath('main.css') rel="stylesheet")
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-  body.d-flex.flex-column.min-vh-100
-    nav.navbar.navbar-expand-lg.navbar-light.bg-light.mb-3
+  body.d-flex.flex-column.min-vh-100.bg-light
+    nav.navbar.navbar-expand-lg.navbar-light.bg-light.mb-3.bg-white
       .container-fluid
         a.navbar-brand(href=route('root'))= t('appName')
         button.navbar-toggler(data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent")
@@ -35,10 +35,9 @@ html(lang="en")
         each message in messages
           div.alert(class=`alert-${getAlertClass(type)}`)= message
 
-      h1.my-4
         block header
       block content
 
-    footer
-      .container.my-5.pt-4.border-top
+    footer.bg-dark.text-light
+      .container.py-3
         a(target="_blank" href="https://ru.hexlet.io") Hexlet
