--- a/server/views/users/edit.pug
+++ b/server/views/users/edit.pug
@@ -1,24 +1,12 @@
 extends ../layouts/application.pug
 
 block content
-  card
-    .container.mt-5
-      .card
-        .card-header
-          h2= t('views.users.edit.cardName')
-        .card-body
-          form(action= route('patchUser') method="post")
-            .form-group
-              input(name="_method" type="hidden" value='patch')
-              label(for="data_firstName")
-              input.form-control(type="text" id="data_firstName" name="data[firstName]" placeholder="Enter first name")
-            .form-group
-              label(for="data_lastName") 
-              input.form-control(type="text" id="data_lastName" name="data[lastName]" placeholder="Enter last name")
-            .form-group
-              label(for="data_email") 
-              input.form-control(type="email" id="data_email" name="data[email]" placeholder="Enter email")
-              label(for="data_password") 
-              input.form-control(type="password" id="data_password" name="data[password]" placeholder="password")
-            button.btn.btn-primary(type="submit") 
-            a.btn.btn-secondary(href="#") 
+  h2.display-4.fw-bold.mt-4= t('views.users.edit.cardName')
+  +formFor()(action='#' method='post')
+    +input(data, 'firstName', errors, t('views.users.edit.name'))(type="text")
+    +input(data, 'lastName', errors, t('views.users.edit.lastName'))(type="text")
+    +input(data, 'email', errors, t('views.users.edit.email'))(type="email")
+    +input(data, 'password', {}, t('views.users.edit.password'))(type="password")
+    input(name="_method" type="hidden" value='patch')
+    +submit(data)(value=t('views.users.edit.change'))
+
