--- a/server/views/users/new.pug
+++ b/server/views/users/new.pug
@@ -5,6 +5,6 @@ block header
 
 block content
   +formFor()(action=route('users') method='post')
-    +input(user, 'email', errors)(type="text")
-    +input(user, 'password', errors)(type="password")
+    +input(user, 'email', errors, t('views.users.new.email'))(type="text")
+    +input(user, 'password', errors, t('views.users.new.password'))(type="password")
     +submit(user)(value=t('views.users.new.submit'))
