--- a/server/views/users/edit.pug
+++ b/server/views/users/edit.pug
@@ -2,11 +2,9 @@ extends ../layouts/application.pug
 
 block content
   h2.display-4.fw-bold.mt-4= t('views.users.edit.cardName')
-  +formFor()(action='#' method='post')
-    +input(data, 'firstName', errors, t('views.users.edit.name'))(type="text")
-    +input(data, 'lastName', errors, t('views.users.edit.lastName'))(type="text")
-    +input(data, 'email', errors, t('views.users.edit.email'))(type="email")
-    +input(data, 'password', {}, t('views.users.edit.password'))(type="password")
+  +formFor()(action= `/users/${data.id}` method='post')
+    +input(data, 'email', errors, t('views.users.edit.email'))(type="text")
+    +input(data, 'password', errors, t('views.users.edit.password'))(type="password")
     input(name="_method" type="hidden" value='patch')
     +submit(data)(value=t('views.users.edit.change'))
 
