--- a/server/views/session/new.pug
+++ b/server/views/session/new.pug
@@ -1,9 +1,7 @@
 extends ../layouts/application.pug
 
-block header
-  = t('views.session.new.signIn')
-
 block content
+  h2.display-4.fw-bold.mt-4= t('views.session.new.signIn')
   +formFor()(action=route('session') method='post')
     +input(signInForm, 'email', errors, t('views.session.new.email'))(type="text")
     +input(signInForm, 'password', {}, t('views.session.new.password'))(type="password")
