--- a/server/views/users/new.pug
+++ b/server/views/users/new.pug
@@ -1,10 +1,8 @@
 extends ../layouts/application.pug
 
-block header
-  = t('views.users.new.signUp')
-
 block content
+  h2.display-4.fw-bold.mt-4= t('views.users.new.signUp')
   +formFor()(action=route('users') method='post')
     +input(user, 'email', errors, t('views.users.new.email'))(type="text")
-    +input(user, 'password', errors, t('views.users.new.password'))(type="password")
+    +input(user, 'password', {}, t('views.users.new.password'))(type="password")
     +submit(user)(value=t('views.users.new.submit'))
