--- a/server/views/statuses/index.pug
+++ b/server/views/statuses/index.pug
@@ -2,6 +2,7 @@ extends ../layouts/application.pug
 
 block content
   h2.display-4.fw-bold.mt-4= t('views.statuses.status')
+  +buttonTo('#', get)
 
   table.table.table-borderless.table-striped.mt-5.bg-white
     thead
