--- a/server/views/statuses/edit.pug
+++ b/server/views/statuses/edit.pug
@@ -3,7 +3,7 @@ extends ../layouts/application.pug
 block content
   h2.display-4.fw-bold.mt-4= t('views.statuses.edit.change')
 
-  +formFor()(action= `/statuses/${data.id}` method='post')
-    +input(data, 'name', errors, t('views.statuses.new.name'))(type="text")
+  +formFor()(action= `/statuses/${status.id}` method='post')
+    +input(status, 'name', errors, t('views.statuses.new.name'))(type="text")
     input(name="_method" type="hidden" value='patch')
-    +submit(data)(value=t('views.statuses.edit.changeButton'))
+    +submit(status)(value=t('views.statuses.edit.changeButton'))
