--- a/server/views/tasks/new.pug
+++ b/server/views/tasks/new.pug
@@ -2,8 +2,9 @@ extends ../layouts/application.pug
 
 block content
   h2.display-4.fw-bold.mt-4= 'TASK CREATION'
-  +formFor()(action=route('tasks') method='post')
-    +input(task, 'name', errors, t('views.tasks.new.name'))(type="text")
-    +input(task, 'description', errors, t('views.tasks.new.description'))(type="text")
-    +select(task, 'statusId', errors = {}, labelName = t('views.tasks.new.status'))
-    +submit(user)(value=t('views.users.new.submit'))
+  +formFor()(action='#' method='post')
+    +input(task, 'name', errors, 'name')(type="text")
+    +textarea(task, 'description', errors, 'description')(rows=3)
+    +select(statuses, 'statusId', errors = {}, 'status')
+    +select(users, 'executorId', errors = {}, 'executor')
+    +submit(task)(value='submitBtn')
