--- a/server/views/mixins/forms.pug
+++ b/server/views/mixins/forms.pug
@@ -43,5 +43,23 @@ mixin select(entity, propertyName, errors = {}, labelName = null)
       name=getInputName(propertyName)
       class=classLine
     )&attributes(attributes)
-      each option in options
-        option(value=option.id) # (option.name)
+      option
+      each option in entity
+        option(value=option.id) #{option.name}
+
+mixin textarea(entity, propertyName, errors = {}, labelName = null)
+  - propertyErrors = _.get(errors, propertyName)
+  - classLine = 'form-control' + (_.isEmpty(propertyErrors) ? '' : ' is-invalid')
+  - inputId = getInputId(propertyName)
+  .mb-3(class=(errors[propertyName] && 'has-danger'))
+    label(
+      for= inputId
+    )= labelName
+    textarea(
+      id= inputId
+      name=getInputName(propertyName)
+      class=classLine
+      value=_.get(entity, propertyName, '')
+    )&attributes(attributes)
+    if !_.isEmpty(propertyErrors)
+      .invalid-feedback= propertyErrors.map(({ message }) => message).join('. ')
