--- a/server/views/tasks/new.pug
+++ b/server/views/tasks/new.pug
@@ -2,9 +2,9 @@ extends ../layouts/application.pug
 
 block content
   h2.display-4.fw-bold.mt-4= 'TASK CREATION'
-  +formFor()(action='#' method='post')
+  +formFor()(action=route('tasks') method='post')
     +input(task, 'name', errors, 'name')(type="text")
     +textarea(task, 'description', errors, 'description')(rows=3)
-    +select(statuses, 'statusId', errors = {}, 'status')
-    +select(users, 'executorId', errors = {}, 'executor')
+    +select(statuses, 'statusId', errors = {}, 'status', 'name')
+    +select(users, 'executorId', errors = {}, 'executor', 'email')
     +submit(task)(value='submitBtn')
