--- a/server/views/tasks/new.pug
+++ b/server/views/tasks/new.pug
@@ -5,6 +5,6 @@ block content
   +formFor()(action=route('tasks') method='post')
     +input(task, 'name', errors, 'name')(type="text")
     +textarea(task, 'description', errors, 'description')(rows=3)
-    +select(statuses, 'status_id', errors = {}, 'status', 'name')
-    +select(users, 'executor_id', errors = {}, 'executor', 'email')
+    +select(statuses, 'statusId', errors = {}, 'status', 'name')
+    +select(users, 'executorId', errors = {}, 'executor', 'email')
     +submit(task)(value='submitBtn')
