--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -19,11 +19,11 @@ block content
         tr
           td= task.id
           td
-            a(href="#")= 'name'
-          td= task.status
+            a(href="#")= task.name
+          td= task.status.name
           td= task.creatorId
           td= task.executorId
-          td= task.created_at
+          td= formatDate(task.createdAt)
           td
             div.d-flex.flex-wrap
               a.btn.btn-primary.me-1(href=`#`)= 'editbtn'
