--- a/server/views/tasks/new.pug
+++ b/server/views/tasks/new.pug
@@ -4,7 +4,7 @@ block content
   h2.display-4.fw-bold.mt-4= 'TASK CREATION'
   +formFor()(action=route('tasks') method='post')
     +input(task, 'name', errors, 'name')(type="text")
-    +textarea(task, 'description', errors, 'description')(rows=3)
+    +textarea(task, 'description', errors = {}, 'description')(rows=3)
     +select(statuses, 'statusId', errors = {}, 'status', 'name')
     +select(users, 'executorId', errors = {}, 'executor', 'email')
     +submit(task)(value='submitBtn')
