--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -1,18 +1,18 @@
 extends ../layouts/application.pug
 
 block content
-  h2.display-4.fw-bold.mt-4= 'TASKS'
-  a.btn.btn-primary(href=route('newTask'))= 'createbtn'
+  h2.display-4.fw-bold.mt-4= t('views.tasks.title')
+  a.btn.btn-primary(href=route('newTask'))= t('views.tasks.create')
 
   table.table.table-borderless.table-striped.mt-5.bg-white
     thead
       tr
         th= 'ID'
-        th= 'name'
-        th= 'status'
-        th= 'creatorId'
-        th= 'executorId'
-        th= 'created_at'
+        th= t('views.tasks.name')
+        th= t('views.tasks.status')
+        th= t('views.tasks.creator')
+        th= t('views.tasks.executor')
+        th= t('views.tasks.createdAt')
         th= ''
     tbody
       each task in tasks
@@ -29,7 +29,7 @@ block content
           td= formatDate(task.createdAt)
           td
             div.d-flex.flex-wrap
-              a.btn.btn-primary.me-1(href=`/tasks/${task.id}/edit`)= 'editbtn'
+              a.btn.btn-primary.me-1(href=`/tasks/${task.id}/edit`)= t('views.tasks.edit')
               form(action= `/tasks/${task.id}`, method="post")
                 input(name="_method" type="hidden" value='delete')
-                input.btn.btn-danger(type='submit', value='deletebtn')
+                input.btn.btn-danger(type='submit', value= t('views.tasks.delete'))
