--- a/server/views/tasks/view.pug
+++ b/server/views/tasks/view.pug
@@ -1,7 +1,7 @@
 extends ../layouts/application.pug
 
 block content
-  h2.display-4.fw-bold.mt-4= 'TASK VIEW'
+  h2.display-4.fw-bold.mt-4= task.name
   .row.mt-5.p-5.shadow.bg-white
     .col-12.col-md-8.order-2.order-md-1
       .lead.fw-normal.mb-4= task.description
@@ -9,16 +9,17 @@ block content
       .mb-2
         span.me-1.badge.bg-danger.text-white= task.status.name
       .d-flex.flex-wrap.mb-3
-        span.text-muted.me-2= 'Author email'
+        span.text-muted.me-2= t('views.tasks.view.creator')
         span= task.creator.email
       .d-flex.flex-wrap.mb-3
-        span.text-muted.me-2= 'Executor'
-        span= task.executor.email
+        span.text-muted.me-2= t('views.tasks.view.executor')
+        if (task.executor)
+          spawn= task.executor.email
       .d-flex.flex-wrap.mb-3
-        span.text-muted.me-2= 'creation date'
+        span.text-muted.me-2= t('views.tasks.view.date')
         span= task.createdAt
       .d-flex.flex-wrap
-        a.btn.btn-primary.me-1(href=`/tasks/${task.id}/edit`)= 'editbtn'
+        a.btn.btn-primary.me-1(href=`/tasks/${task.id}/edit`)= t('views.tasks.view.edit')
         form(action= `/tasks/${task.id}`, method="post")
           input(name="_method" type="hidden" value='delete')
-          input.btn.btn-danger(type='submit', value='deletebtn')
+          input.btn.btn-danger(type='submit', value= t('views.tasks.view.delete'))
