--- a/server/views/tasks/edit.pug
+++ b/server/views/tasks/edit.pug
@@ -5,7 +5,7 @@ block content
   +formFor()(action= `/tasks/${task.id}` method='post')
     +input(task, 'name', errors, 'name')(type="text")
     +textarea(task, 'description', errors = {}, 'description')(rows=3)
-    +select(statuses, 'statusId', errors = {}, 'status', 'name', task.status.id)
-    +select(users, 'executorId', errors = {}, 'executor', 'email', task.executor.id)
+    +select(statuses, 'statusId', errors = {}, 'status', 'name', task.statusId)
+    +select(users, 'executorId', errors = {}, 'executor', 'email', task.executorId)
     input(name="_method" type="hidden" value='patch')
     +submit(task)(value='submitBtn')
