--- a/server/views/tasks/edit.pug
+++ b/server/views/tasks/edit.pug
@@ -1,11 +1,11 @@
 extends ../layouts/application.pug
 
 block content
-  h2.display-4.fw-bold.mt-4= 'TASK EDIT'
+  h2.display-4.fw-bold.mt-4= t('views.tasks.edit.title')
   +formFor()(action= `/tasks/${task.id}` method='post')
-    +input(task, 'name', errors, 'name')(type="text")
-    +textarea(task, 'description', errors = {}, 'description')(rows=3)
-    +select(statuses, 'statusId', errors = {}, 'status', 'name', task.statusId)
-    +select(users, 'executorId', errors = {}, 'executor', 'email', task.executorId)
+    +input(task, 'name', errors, t('views.tasks.edit.name'))(type="text")
+    +textarea(task, 'description', errors = {}, t('views.tasks.edit.description'))(rows=3)
+    +select(statuses, 'statusId', errors = {}, t('views.tasks.edit.status'), 'name', task.statusId)
+    +select(users, 'executorId', errors = {}, t('views.tasks.edit.executor'), 'email', task.executorId)
     input(name="_method" type="hidden" value='patch')
-    +submit(task)(value='submitBtn')
+    +submit(task)(value= t('views.tasks.edit.submit'))
