--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -29,7 +29,7 @@ block content
           td= formatDate(task.createdAt)
           td
             div.d-flex.flex-wrap
-              a.btn.btn-primary.me-1(href=`/tasks/${task.id}/edit`)= t('views.tasks.edit')
+              a.btn.btn-primary.me-1(href=`/tasks/${task.id}/edit`)= t('views.tasks.editbtn')
               form(action= `/tasks/${task.id}`, method="post")
                 input(name="_method" type="hidden" value='delete')
                 input.btn.btn-danger(type='submit', value= t('views.tasks.delete'))
