--- a/server/views/labels/index.pug
+++ b/server/views/labels/index.pug
@@ -19,7 +19,7 @@ block content
           td= formatDate(label.createdAt)
           td
             div.d-flex.flex-wrap
-              a.btn.btn-primary.me-1(href=`#`)= t('views.labels.editbtn')
-              form(action= `#`, method="post")
+              a.btn.btn-primary.me-1(href=`labels/${label.id}/edit`)= t('views.labels.editbtn')
+              form(action= `/labels/${label.id}`, method="post")
                 input(name="_method" type="hidden" value='delete')
                 input.btn.btn-danger(type='submit', value=t('views.labels.delete'))
