--- a/server/views/tasks/view.pug
+++ b/server/views/tasks/view.pug
@@ -8,8 +8,8 @@ block content
     .ol-12.col-md-4.border-start.px-3.order-1.order-md-2.mb-3.mb-md-0
       .mb-2
         span.me-1.badge.bg-danger.text-white= task.status.name
-        if labels
-          each label in labels
+        if task.labels
+          each label in task.labels
             spawn.me-1.badge.bg-info.text-white= label.name
       .d-flex.flex-wrap.mb-3
         span.text-muted.me-2= t('views.tasks.view.creator')
