--- a/server/views/mixins/forms.pug
+++ b/server/views/mixins/forms.pug
@@ -45,7 +45,7 @@ mixin select(entity, propertyName, errors = {}, labelName = null, selectName, cu
     )&attributes(attributes)
       option(value='')
       each option in entity
-        - isSelected = currentOption && [...currentOption].some(elem => parseInt(elem.id, 10) === parseInt(option.id, 10))
+        - isSelected = Array.isArray(currentOption) && currentOption.some(elem => parseInt(elem.id, 10) === parseInt(option.id, 10))
         option(value=option.id selected=isSelected)= option[selectName]
     if !_.isEmpty(propertyErrors)
       div= propertyErrors.map(({ message }) => message).join('. ')
