--- a/server/views/tasks/edit.pug
+++ b/server/views/tasks/edit.pug
@@ -5,8 +5,8 @@ block content
   +formFor()(action= `/tasks/${task.id}` method='post')
     +input(task, 'name', errors, t('views.tasks.edit.name'))(type="text")
     +textarea(task, 'description', errors = {}, t('views.tasks.edit.description'))(rows=3)
-    +select(statuses, 'statusId', errors = {}, t('views.tasks.edit.status'), 'name', task.statusId)
-    +select(users, 'executorId', errors = {}, t('views.tasks.edit.executor'), 'email', task.executorId)
-    +select(labels, 'labels', errors = {}, t('views.tasks.edit.labels'), 'name', selectedLabels)(multiple="multiple")
+    +select(statuses, 'statusId', errors = {}, t('views.tasks.edit.status'), 'name', [task.statusId])
+    +select(users, 'executorId', errors = {}, t('views.tasks.edit.executor'), 'email', [task.executorId])
+    +select(labels, 'labels', errors = {}, t('views.tasks.edit.labels'), 'name', task.labels.map(label => label.id))(multiple="multiple")
     input(name="_method" type="hidden" value='patch')
     +submit(task)(value= t('views.tasks.edit.submit'))
