--- a/server/views/mixins/forms.pug
+++ b/server/views/mixins/forms.pug
@@ -70,7 +70,7 @@ mixin textarea(entity, propertyName, errors = {}, labelName = null)
 mixin filterSelect(entity, propertyName, errors = {}, labelName = null, selectName, currentOption)
   - optArr = currentOption ? Array.from(currentOption) : []
   - propertyErrors = _.get(errors, propertyName)
-  - classLine = 'form-control' + (_.isEmpty(propertyErrors) ? '' : ' is-invalid')
+  - classLine = 'form-select' + (_.isEmpty(propertyErrors) ? '' : ' is-invalid')
   - inputId = getInputId(propertyName)
   .input-group.mb-3(class=(errors[propertyName] && 'has-danger'))
     label.input-group-text(
@@ -78,7 +78,6 @@ mixin filterSelect(entity, propertyName, errors = {}, labelName = null, selectNa
     )= labelName
     select(
       id= inputId
-      name=getInputName(propertyName)
       class=classLine
     )&attributes(attributes)
       option(value='')
