--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -4,22 +4,18 @@ block content
   h2.display-4.fw-bold.mt-4= t('views.tasks.title')
   a.btn.btn-primary(href=route('newTask'))= t('views.tasks.create')
 
-  .card-shadow-sm
+  .card.shadow-sm
     .card-body.p-4
       +formFor()(action=route('tasks') method='get')
         .row
           .col-12.col-md
-            .input-group.mb-3
-              +filterSelect(statuses, 'statusId', errors = {}, t('views.tasks.edit.status'), 'name')
+            +filterSelect(statuses, 'statusId', errors = {}, t('views.tasks.edit.status'), 'name')(name= 'status')
           .col-12.col-md
-            .input-group.mb-3
-              +filterSelect(users, 'executorId', errors = {}, t('views.tasks.edit.executor'), 'name')
+            +filterSelect(users, 'executorId', errors = {}, t('views.tasks.edit.executor'), 'email')(name= 'executor')
           .col-12.col-md
-            .input-group.mb-3
-              +filterSelect(labels, 'labels', errors = {}, t('views.tasks.edit.labels'), 'name')
+            +filterSelect(labels, 'labels', errors = {}, t('views.tasks.edit.labels'), 'name')(name= 'label')
 
-
-        +submit()(value= 'submitBtn')
+        +submit(tasks)(value= 'submitBtn')
 
   table.table.table-borderless.table-striped.mt-5.bg-white
     thead
