--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -9,7 +9,7 @@ html(lang="en")
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
   body.d-flex.flex-column.min-vh-100.bg-light
-    nav.navbar.navbar-expand-lg.navbar-light.bg-light.mb-3.bg-white
+    nav.navbar.navbar-expand-lg.navbar-light.mb-3.bg-secondary.bg-opacity-25
       .container-fluid
         a.navbar-brand(href=route('root'))= t('appName')
         button.navbar-toggler(data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent")
@@ -44,6 +44,4 @@ html(lang="en")
         block header
       block content
 
-    footer.bg-dark.text-light
-      .container.py-3
-        a(target="_blank" href="https://ru.hexlet.io") Hexlet
+    footer
