--- a/server/views/tasks/new.pug
+++ b/server/views/tasks/new.pug
@@ -5,7 +5,7 @@ block content
   +formFor()(action=route('tasks') method='post')
     +input(task, 'name', errors, t('views.tasks.new.name'))(type="text")
     +textarea(task, 'description', errors = {}, t('views.tasks.new.description'))(rows=3)
-    +select(statuses, 'statusId', test = {}, t('views.tasks.new.status'), 'name')
+    +select(statuses, 'statusId', errors, t('views.tasks.new.status'), 'name')
     +select(users, 'executorId', errors = {}, t('views.tasks.new.executor'), 'email')
     +select(labels, 'labels', errors = {}, t('views.tasks.new.labels'), 'name')(multiple="multiple")
     +submit(task)(value= t('views.tasks.new.submit'))
