--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -1,6 +1,7 @@
 extends ../layouts/application.pug
 
 block content
+  h2.display-4.fw-bold.mt-4.p-3= t('views.users.title')
   table.table.table-striped
     thead
       tr
