--- a/server/views/tasks/new.pug
+++ b/server/views/tasks/new.pug
@@ -4,8 +4,8 @@ block content
   h2.display-4.fw-bold.mt-4= t('views.tasks.new.title')
   +formFor()(action=route('tasks') method='post')
     +input(task, 'name', errors, t('views.tasks.new.name'))(type="text")
-    +textarea(task, 'description', errors = {}, t('views.tasks.new.description'))(rows=3)
-    +select(statuses, 'statusId', errors, t('views.tasks.new.status'), 'name')
-    +select(users, 'executorId', errors = {}, t('views.tasks.new.executor'), 'email')
-    +select(labels, 'labels', errors = {}, t('views.tasks.new.labels'), 'name')(multiple="multiple")
+    +textarea(task, 'description', errors, t('views.tasks.new.description'))(rows=3)
+    +select(statuses, 'statusId', errors, t('views.tasks.new.status'), task.statusId)
+    +select(users, 'executorId', errors, t('views.tasks.new.executor'), task.executorId)
+    +select(labels, 'labels', errors, t('views.tasks.new.labels'), task.labels)(multiple="multiple")
     +submit(task)(value= t('views.tasks.new.submit'))
