--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -6,6 +6,7 @@ block content
     thead
       tr
         th= t('views.users.id')
+        th= t('views.users.fullName')
         th= t('views.users.email')
         th= t('views.users.createdAt')
         th= t('views.users.actions')
@@ -13,6 +14,7 @@ block content
       each user in users
         tr
           td= user.id
+          td= user.fullName()
           td= user.email
           td= formatDate(user.createdAt)
           td
