--- a/server/views/users/new.pug
+++ b/server/views/users/new.pug
@@ -3,6 +3,8 @@ extends ../layouts/application.pug
 block content
   h2.display-4.fw-bold.mt-4= t('views.users.new.signUp')
   +formFor()(action=route('users') method='post')
-    +input(user, 'email', errors, t('views.users.new.email'))(type="text")
+    +input(user, 'firstName', errors, t('views.users.new.fname'))(type="text")
+    +input(user, 'lastName', errors, t('views.users.new.lname'))(type="text")
+    +input(user, 'email', errors, t('views.users.new.email'))(type="email")
     +input(user, 'password', {}, t('views.users.new.password'))(type="password")
     +submit(user)(value=t('views.users.new.submit'))
