--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -20,7 +20,7 @@ block content
             class='form-check-input'
             type='checkbox'
             name='isCreatorUser'
-            checked= filter.isCreatorUser
+            checked= filter.userId
           )
           label(
             class='form-check-label'
